# cxx-precise-examples

./: .gitattributes  .gitignore  README.md
.github/workflows/: index.yml
piecewise_monorepo/: .gitignore  CMakeLists.txt  Makefile
piecewise_monorepo/arithmetic/: CMakeLists.txt
piecewise_monorepo/arithmetic/include/arithmetic/: multiplication.hpp
piecewise_monorepo/arithmetic/src/: multiplication.cpp
piecewise_monorepo/geometry/square/: CMakeLists.txt
piecewise_monorepo/geometry/square/src/: square.cpp  square.hpp
